2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix LL benchmark code generation.

	* benchmarks/livermore/ll-generate.py: Do not generate Fibre read
	block for write-only kernel parameters. Also generate the
	`benchX.inputs' file.

2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes in LL kernels.

	* benchmarks/livermore/kernel10.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel21.c,	
	* benchmarks/livermore/kernel23.c: Sanitize types in C99 VLA
	declarations to please C++ compiler.
	
	* benchmarks/livermore/kernel1.c,
	* benchmarks/livermore/kernel4.c,
	* benchmarks/livermore/kernel5.c,
	* benchmarks/livermore/kernel7.c,
	* benchmarks/livermore/kernel9.c,
	* benchmarks/livermore/kernel12.c: Fix typos.

2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Build and run LL suite using new framework.

	* benchmarks/livermore/Makefile.am: Use the new files.

	* benchmarks/livermore/ll.h,
	* benchmarks/livermore/arrays.h,
	* benchmarks/livermore/main_bench.c,
	* benchmarks/livermore/main_test.c,
	* benchmarks/livermore/main_simple.c,
	* benchmarks/livermore/bench1.bin.mtalpha.psize,
	* benchmarks/livermore/bench2.bin.mtalpha.psize,
	* benchmarks/livermore/bench3.bin.mtalpha.psize,
	* benchmarks/livermore/bench4.bin.mtalpha.psize,
	* benchmarks/livermore/bench5.bin.mtalpha.psize,
	* benchmarks/livermore/bench6.bin.mtalpha.psize,
	* benchmarks/livermore/bench7.bin.mtalpha.psize,
	* benchmarks/livermore/bench8.bin.mtalpha.psize,
	* benchmarks/livermore/bench9.bin.mtalpha.psize,
	* benchmarks/livermore/bench10.bin.mtalpha.psize,
	* benchmarks/livermore/bench11.bin.mtalpha.psize,
	* benchmarks/livermore/bench12.bin.mtalpha.psize,
	* benchmarks/livermore/bench13.bin.mtalpha.psize,
	* benchmarks/livermore/bench14.bin.mtalpha.psize: Remove (obsolete).

2009-12-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More kernels in LL suite.
	
	* benchmarks/livermore/kernel21.c: 
	* benchmarks/livermore/kernel22.c: 